--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -16,8 +16,8 @@
             </button>
             <ul class="dropdown-menu">
                 <li class="cursor"><a (click)="onAddToShoppingList()">To Shopping List</a></li>
-                <li><a href="#">Edit Recipe</a></li>
-                <li><a href="#">Delete Recipe</a></li>
+                <li class="cursor" (click)="onEditRecipe()"><a>Edit Recipe</a></li>
+                <li class="cursor"><a>Delete Recipe</a></li>
             </ul>
         </div>
     </div>
