--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -17,7 +17,7 @@
             <ul class="dropdown-menu">
                 <li class="cursor"><a (click)="onAddToShoppingList()">To Shopping List</a></li>
                 <li class="cursor" (click)="onEditRecipe()"><a>Edit Recipe</a></li>
-                <li class="cursor"><a>Delete Recipe</a></li>
+                <li class="cursor" (click)="onDeleteRecipe()"><a>Delete Recipe</a></li>
             </ul>
         </div>
     </div>
