--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -34,7 +34,7 @@
                     <div class="form-group">
                         <label for="description">Description</label>
                         <textarea type="text" id="description" class="form-control" rows="6"
-                            formControlName="recipeDescription"></textarea>
+                            formControlName="description"></textarea>
                     </div>
                 </div>
             </div>
